--- a/terminology/rxnorm.ipynb
+++ b/terminology/rxnorm.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import duckdb\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import csv"
    ]
   },
   {
@@ -28,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.DuckDBPyConnection at 0xffffa6695bf0>"
+       "<duckdb.DuckDBPyConnection at 0xffff8025f0b0>"
       ]
      },
      "execution_count": 3,
@@ -253,7 +254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65e6a406f5d048c8b61ebb2fd9bc1719",
+       "model_id": "19c7fb0481e1491d9c2f72bb7c5f62a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -504,22 +505,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>RXCUI</th>\n",
-       "      <th>LAT</th>\n",
-       "      <th>TS</th>\n",
-       "      <th>LUI</th>\n",
-       "      <th>STT</th>\n",
-       "      <th>SUI</th>\n",
-       "      <th>ISPREF</th>\n",
-       "      <th>RXAUI</th>\n",
-       "      <th>SAUI</th>\n",
-       "      <th>SCUI</th>\n",
-       "      <th>SDUI</th>\n",
+       "      <th>RXCUI1</th>\n",
+       "      <th>RXAUI1</th>\n",
+       "      <th>STYPE1</th>\n",
+       "      <th>REL</th>\n",
+       "      <th>RXCUI2</th>\n",
+       "      <th>RXAUI2</th>\n",
+       "      <th>STYPE2</th>\n",
+       "      <th>RELA</th>\n",
+       "      <th>RUI</th>\n",
+       "      <th>SRUI</th>\n",
        "      <th>SAB</th>\n",
-       "      <th>TTY</th>\n",
-       "      <th>CODE</th>\n",
-       "      <th>STR</th>\n",
-       "      <th>SRL</th>\n",
+       "      <th>SL</th>\n",
+       "      <th>RG</th>\n",
+       "      <th>DIR</th>\n",
        "      <th>SUPPRESS</th>\n",
        "      <th>CVF</th>\n",
        "    </tr>\n",
@@ -527,127 +526,117 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>AUI</td>\n",
-       "      <td>SY</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>AUI</td>\n",
-       "      <td>permuted_term_of</td>\n",
-       "      <td>155592245.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>SDUI</td>\n",
+       "      <td>RN</td>\n",
+       "      <td></td>\n",
+       "      <td>609702</td>\n",
+       "      <td>SDUI</td>\n",
+       "      <td>mapped_to</td>\n",
+       "      <td>154691227</td>\n",
+       "      <td></td>\n",
        "      <td>MSH</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>SDUI</td>\n",
-       "      <td>RN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>609702.0</td>\n",
-       "      <td>SDUI</td>\n",
-       "      <td>mapped_to</td>\n",
-       "      <td>154691227.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>AUI</td>\n",
+       "      <td>SY</td>\n",
+       "      <td></td>\n",
+       "      <td>2666961</td>\n",
+       "      <td>AUI</td>\n",
+       "      <td>sort_version_of</td>\n",
+       "      <td>155371534</td>\n",
+       "      <td></td>\n",
        "      <td>MSH</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
        "      <td>AUI</td>\n",
        "      <td>SY</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2666961.0</td>\n",
+       "      <td></td>\n",
+       "      <td>2681015</td>\n",
        "      <td>AUI</td>\n",
-       "      <td>sort_version_of</td>\n",
-       "      <td>155371534.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>entry_version_of</td>\n",
+       "      <td>155054914</td>\n",
+       "      <td></td>\n",
        "      <td>MSH</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td></td>\n",
+       "      <td>6</td>\n",
        "      <td>AUI</td>\n",
        "      <td>SY</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2681015.0</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
        "      <td>AUI</td>\n",
-       "      <td>entry_version_of</td>\n",
-       "      <td>155054914.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>has_permuted_term</td>\n",
+       "      <td>154688723</td>\n",
+       "      <td></td>\n",
        "      <td>MSH</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td></td>\n",
+       "      <td>8</td>\n",
        "      <td>AUI</td>\n",
        "      <td>SY</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td></td>\n",
+       "      <td>8199098</td>\n",
        "      <td>AUI</td>\n",
        "      <td>has_permuted_term</td>\n",
-       "      <td>154688723.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>155465282</td>\n",
+       "      <td></td>\n",
        "      <td>MSH</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   RXCUI  LAT    TS LUI  STT        SUI ISPREF              RXAUI  \\\n",
-       "0    NaN  5.0   AUI  SY  NaN        6.0    AUI   permuted_term_of   \n",
-       "1    NaN  5.0  SDUI  RN  NaN   609702.0   SDUI          mapped_to   \n",
-       "2    NaN  5.0   AUI  SY  NaN  2666961.0    AUI    sort_version_of   \n",
-       "3    NaN  5.0   AUI  SY  NaN  2681015.0    AUI   entry_version_of   \n",
-       "4    NaN  6.0   AUI  SY  NaN        5.0    AUI  has_permuted_term   \n",
+       "  RXCUI1 RXAUI1 STYPE1 REL RXCUI2   RXAUI2 STYPE2               RELA  \\\n",
+       "0             5   SDUI  RN          609702   SDUI          mapped_to   \n",
+       "1             5    AUI  SY         2666961    AUI    sort_version_of   \n",
+       "2             5    AUI  SY         2681015    AUI   entry_version_of   \n",
+       "3             6    AUI  SY               5    AUI  has_permuted_term   \n",
+       "4             8    AUI  SY         8199098    AUI  has_permuted_term   \n",
        "\n",
-       "          SAUI  SCUI SDUI  SAB  TTY  CODE  STR  SRL  SUPPRESS  CVF  \n",
-       "0  155592245.0   NaN  MSH  NaN  NaN   NaN  NaN  NaN       NaN  NaN  \n",
-       "1  154691227.0   NaN  MSH  NaN  1.0   NaN  NaN  NaN       NaN  NaN  \n",
-       "2  155371534.0   NaN  MSH  NaN  NaN   NaN  NaN  NaN       NaN  NaN  \n",
-       "3  155054914.0   NaN  MSH  NaN  NaN   NaN  NaN  NaN       NaN  NaN  \n",
-       "4  154688723.0   NaN  MSH  NaN  NaN   NaN  NaN  NaN       NaN  NaN  "
+       "         RUI SRUI  SAB SL RG DIR SUPPRESS CVF  \n",
+       "0  154691227       MSH     1                   \n",
+       "1  155371534       MSH                         \n",
+       "2  155054914       MSH                         \n",
+       "3  154688723       MSH                         \n",
+       "4  155465282       MSH                         "
       ]
      },
      "execution_count": 6,
@@ -656,9 +645,21 @@
     }
    ],
    "source": [
-    "cols = ['RXCUI', 'LAT', 'TS', 'LUI', 'STT', 'SUI', 'ISPREF', 'RXAUI', 'SAUI', 'SCUI', 'SDUI', 'SAB', 'TTY', 'CODE', 'STR', 'SRL', 'SUPPRESS', 'CVF']\n",
+    "cols = ['RXCUI1', 'RXAUI1', 'STYPE1', 'REL', 'RXCUI2', 'RXAUI2', 'STYPE2', 'RELA', 'RUI', 'SRUI', 'SAB', 'SL', 'RG', 'DIR', 'SUPPRESS', 'CVF', 'extra']\n",
     "\n",
-    "RXNREL = pd.read_csv('/workspaces/practice/terminology/rrf/RXNREL.RRF', sep='|', names=cols, dtype={\"RXAUI\": str})\n",
+    "with open('/workspaces/practice/terminology/rrf/RXNREL.RRF', 'r') as f:\n",
+    "    reader = csv.reader(f, delimiter='|')\n",
+    "    header = next(reader)\n",
+    "    data = [row for row in reader]\n",
+    "\n",
+    "# convert data to a pandas dataframe named RXNREL with the columns from header\n",
+    "RXNREL = pd.DataFrame(data)\n",
+    "\n",
+    "# set the column names of RXNREL to cols\n",
+    "RXNREL.columns = cols\n",
+    "\n",
+    "# drop the extra column\n",
+    "RXNREL.drop('extra', axis=1, inplace=True)\n",
     "\n",
     "con.execute('create or replace table RXNORM.RXNREL as select * from RXNREL')\n",
     "\n",
@@ -946,14 +947,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2466/487966364.py:3: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  RXNSAT = pd.read_csv('/workspaces/practice/rxnorm/rrf/RXNSAT.RRF', sep='|', names=cols)\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -992,102 +985,102 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>829</td>\n",
-       "      <td>AUI</td>\n",
        "      <td>38</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RXN_BN_CARDINALITY</td>\n",
-       "      <td>RXNORM</td>\n",
-       "      <td>single</td>\n",
-       "      <td>N</td>\n",
-       "      <td>4096.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td>8056626</td>\n",
        "      <td>AUI</td>\n",
        "      <td>D001971</td>\n",
        "      <td>AT212333259</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "      <td>TERMUI</td>\n",
        "      <td>MSH</td>\n",
        "      <td>T005606</td>\n",
        "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>1</th>\n",
+       "      <td>38</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td>8056626</td>\n",
        "      <td>AUI</td>\n",
        "      <td>D001971</td>\n",
        "      <td>AT212365433</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "      <td>LT</td>\n",
        "      <td>MSH</td>\n",
        "      <td>TRD</td>\n",
        "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>2</th>\n",
+       "      <td>38</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td>8056626</td>\n",
        "      <td>AUI</td>\n",
        "      <td>D001971</td>\n",
        "      <td>AT212543507</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "      <td>TH</td>\n",
        "      <td>MSH</td>\n",
        "      <td>UNK (19XX)</td>\n",
        "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>3</th>\n",
+       "      <td>38</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "      <td>8056626</td>\n",
        "      <td>SCUI</td>\n",
        "      <td>D001971</td>\n",
        "      <td>AT60770509</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "      <td>RN</td>\n",
        "      <td>MSH</td>\n",
        "      <td>0</td>\n",
        "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>44</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>946</td>\n",
+       "      <td>AUI</td>\n",
+       "      <td>D015080</td>\n",
+       "      <td>AT17509891</td>\n",
+       "      <td></td>\n",
+       "      <td>TH</td>\n",
+       "      <td>MSH</td>\n",
+       "      <td>USAN (1990)</td>\n",
+       "      <td>N</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   RXCUI  LUI      SUI RXAUI    STYPE         CODE  ATUI               SATUI  \\\n",
-       "0    NaN  NaN      829   AUI       38          NaN   NaN  RXN_BN_CARDINALITY   \n",
-       "1    NaN  NaN  8056626   AUI  D001971  AT212333259   NaN              TERMUI   \n",
-       "2    NaN  NaN  8056626   AUI  D001971  AT212365433   NaN                  LT   \n",
-       "3    NaN  NaN  8056626   AUI  D001971  AT212543507   NaN                  TH   \n",
-       "4    NaN  NaN  8056626  SCUI  D001971   AT60770509   NaN                  RN   \n",
+       "  RXCUI LUI SUI    RXAUI STYPE     CODE         ATUI SATUI     ATN  SAB  \\\n",
+       "0    38          8056626   AUI  D001971  AT212333259        TERMUI  MSH   \n",
+       "1    38          8056626   AUI  D001971  AT212365433            LT  MSH   \n",
+       "2    38          8056626   AUI  D001971  AT212543507            TH  MSH   \n",
+       "3    38          8056626  SCUI  D001971   AT60770509            RN  MSH   \n",
+       "4    44              946   AUI  D015080   AT17509891            TH  MSH   \n",
        "\n",
-       "      ATN         SAB ATV  SUPPRESS  CVF  \n",
-       "0  RXNORM      single   N    4096.0  NaN  \n",
-       "1     MSH     T005606   N       NaN  NaN  \n",
-       "2     MSH         TRD   N       NaN  NaN  \n",
-       "3     MSH  UNK (19XX)   N       NaN  NaN  \n",
-       "4     MSH           0   N       NaN  NaN  "
+       "           ATV SUPPRESS CVF  \n",
+       "0      T005606        N      \n",
+       "1          TRD        N      \n",
+       "2   UNK (19XX)        N      \n",
+       "3            0        N      \n",
+       "4  USAN (1990)        N      "
       ]
      },
      "execution_count": 8,
@@ -1096,9 +1089,21 @@
     }
    ],
    "source": [
-    "cols = ['RXCUI', 'LUI', 'SUI', 'RXAUI', 'STYPE', 'CODE', 'ATUI', 'SATUI', 'ATN', 'SAB', 'ATV', 'SUPPRESS', 'CVF']\n",
+    "cols = ['RXCUI', 'LUI', 'SUI', 'RXAUI', 'STYPE', 'CODE', 'ATUI', 'SATUI', 'ATN', 'SAB', 'ATV', 'SUPPRESS', 'CVF', 'extra']\n",
     "\n",
-    "RXNSAT = pd.read_csv('/workspaces/practice/terminology/rrf/RXNSAT.RRF', sep='|', names=cols)\n",
+    "with open('/workspaces/practice/terminology/rrf/RXNSAT.RRF', 'r') as f:\n",
+    "    reader = csv.reader(f, delimiter='|')\n",
+    "    header = next(reader)\n",
+    "    data = [row for row in reader]\n",
+    "    \n",
+    "# convert data to a pandas dataframe named RXNSAT with the columns from header\n",
+    "RXNSAT = pd.DataFrame(data)\n",
+    "\n",
+    "# set the column names of RXNSAT to cols\n",
+    "RXNSAT.columns = cols\n",
+    "\n",
+    "# drop the extra column\n",
+    "RXNSAT.drop('extra', axis=1, inplace=True)\n",
     "\n",
     "con.execute('create or replace table RXNORM.RXNSAT as select * from RXNSAT')\n",
     "\n",
@@ -1601,7 +1606,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1615,12 +1620,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "648aad9b33b872d1499c19be1e33a9354c007cb2b65788f4c03eddc793da7c33"
+    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
    }
   }
  },
