--- a/terminology/medispan/medfv2.ipynb
+++ b/terminology/medispan/medfv2.ipynb
@@ -29,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.DuckDBPyConnection at 0xffffaa5e5870>"
+       "<duckdb.DuckDBPyConnection at 0xffff3a1ebcf0>"
       ]
      },
      "execution_count": 3,
@@ -507,124 +507,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>record_type</th>\n",
-       "      <th>reserve_1</th>\n",
-       "      <th>sequence_number</th>\n",
-       "      <th>reserve_2</th>\n",
-       "      <th>comment_marker</th>\n",
-       "      <th>data_comment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CCR</td>\n",
-       "      <td></td>\n",
-       "      <td>010</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Copyright 2023 UpToDate, Inc. All Rights Rese...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CDC</td>\n",
-       "      <td></td>\n",
-       "      <td>010</td>\n",
-       "      <td></td>\n",
-       "      <td>*</td>\n",
-       "      <td>Create Date</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CDC</td>\n",
-       "      <td></td>\n",
-       "      <td>020</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>20230126</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CDE</td>\n",
-       "      <td></td>\n",
-       "      <td>010</td>\n",
-       "      <td></td>\n",
-       "      <td>*</td>\n",
-       "      <td>Expiration Date</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CDE</td>\n",
-       "      <td></td>\n",
-       "      <td>020</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>20230301</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  record_type reserve_1 sequence_number reserve_2 comment_marker  \\\n",
-       "0         CCR                       010                            \n",
-       "1         CDC                       010                        *   \n",
-       "2         CDC                       020                            \n",
-       "3         CDE                       010                        *   \n",
-       "4         CDE                       020                            \n",
-       "\n",
-       "                                        data_comment  \n",
-       "0   Copyright 2023 UpToDate, Inc. All Rights Rese...  \n",
-       "1                                        Create Date  \n",
-       "2                                           20230126  \n",
-       "3                                    Expiration Date  \n",
-       "4                                           20230301  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cols = ['record_type', 'reserve_1', 'sequence_number', 'reserve_2', 'comment_marker', 'data_comment']\n",
-    "\n",
-    "with open('/workspaces/practice/terminology/medispan/med-file2_0_0_mo_pdu-delimt_clinical_d_20230201/MEDFV2/USAENG/DB/DELIMIT/mf2sum', 'r') as f:\n",
-    "    reader = csv.reader(f, delimiter='|')\n",
-    "    data = list(reader)\n",
-    "    mf2sum = pd.DataFrame(data, columns=cols)\n",
-    "\n",
-    "con.execute('create or replace table medispan.mf2sum as select * from mf2sum')\n",
-    "\n",
-    "con.execute('select * from medispan.mf2sum limit 5').fetchdf()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
        "      <th>concept_type</th>\n",
        "      <th>country_code</th>\n",
        "      <th>concept_id</th>\n",
@@ -705,7 +587,7 @@
        "4  Pseudoeph-Carbinox-Hydrocod          "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +826,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +950,7 @@
        "4                 B                                  20230201  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1088,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1074,7 @@
        "4                          20230201  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1216,7 @@
        "4        00081      4                               "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1359,7 @@
        "4                       N          "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1477,7 @@
        "4                             "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1719,7 +1601,7 @@
        "4                       1          "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1739,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1750,7 @@
        "4                                                               "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1888,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1868,7 @@
        "4                            1                           "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +1992,7 @@
        "4                                        N          "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2130,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2122,7 @@
        "4                    "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2260,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2370,7 +2252,7 @@
        "4                    "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2390,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2512,7 +2394,7 @@
        "4    00035      1                               "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2532,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2654,7 +2536,7 @@
        "4        00008      4                               "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2674,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2803,7 +2685,7 @@
        "4             01100010102135                                  20230201  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2823,7 +2705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3042,7 +2924,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3062,7 +2944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3178,7 +3060,7 @@
        "4                               "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3198,7 +3080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3208,7 +3090,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -3222,12 +3104,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "648aad9b33b872d1499c19be1e33a9354c007cb2b65788f4c03eddc793da7c33"
+    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
    }
   }
  },
