--- a/terminology/metathesaurus.ipynb
+++ b/terminology/metathesaurus.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.DuckDBPyConnection at 0xffff49d251f0>"
+       "<duckdb.DuckDBPyConnection at 0xffff31ac69f0>"
       ]
      },
      "execution_count": 3,
@@ -48,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da70469f71054e0880333586d2057010",
+       "model_id": "0e8b1f97329a4f82af3cec474c5d53b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -480,7 +480,7 @@
    ],
    "source": [
     "# use pandas to read the csv file\n",
-    "MRCONSO = pd.read_csv('/workspaces/practice/terminology/umls_metathesaurus/MRCONSO.RRF', sep='|', header=None, names=['CUI', 'LAT', 'TS', 'LUI', 'STT', 'SUI', 'ISPREF', 'AUI', 'SAUI', 'SCUI', 'SDUI', 'SAB', 'TTY', 'CODE', 'STR', 'SRL', 'SUPPRESS', 'CVF', 'RESERVE'], dtype={\"SCUI\": str, \"SDUI\": str, \"CODE\": str})\n",
+    "MRCONSO = pd.read_csv('/workspaces/practice/terminology/MRCONSO.RRF', sep='|', header=None, names=['CUI', 'LAT', 'TS', 'LUI', 'STT', 'SUI', 'ISPREF', 'AUI', 'SAUI', 'SCUI', 'SDUI', 'SAB', 'TTY', 'CODE', 'STR', 'SRL', 'SUPPRESS', 'CVF', 'RESERVE'], dtype={\"SCUI\": str, \"SDUI\": str, \"CODE\": str})\n",
     "\n",
     "MRCONSO = MRCONSO.drop(columns=['RESERVE'])\n",
     "\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -516,12 +516,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "648aad9b33b872d1499c19be1e33a9354c007cb2b65788f4c03eddc793da7c33"
+    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
    }
   }
  },
